--- a/style.css
+++ b/style.css
@@ -1,44 +1,49 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap');
 
 
-body{
-    background-image: url(/list-icon-notebook-with-completed-todo-list-3d-render_471402-428.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
+body {
+    background-image: linear-gradient(100deg, #575656, #062e3f);
     font-family: 'Rajdhani', sans-serif;
-
+ 
 }
 
-.head{
+.head {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
 }
 
-#result{
+#result {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgba(24,24,27,0.6) ;
+    background-color: rgba(24, 24, 27, 0.6);
     border: 1px solid white;
     border-radius: 10px;
     width: 600px;
     color: bisque;
     padding: 12px;
-    
+    overflow: hidden;
+
 }
-#todo{
+
+#todo {
     width: 520px;
     border-radius: 2px;
     height: 20px;
 }
 
-h1{
+h1 {
     font-size: 55px;
 }
 
-.button{
+.button {
     width: 100px;
     border-radius: 5px;
 }
+/* .main{
+    color: gray;
+    border: 2px solid floralwhite;
+    background-color: floralwhite;
+} */
