--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap');
 
+html{
+    font-size: 10px;
+}
+
 
 body {
     background-image: linear-gradient(100deg, #575656, #062e3f);
@@ -19,31 +23,68 @@ body {
     flex-direction: column;
     justify-content: center;
     background-color: rgba(24, 24, 27, 0.6);
-    border: 1px solid white;
-    border-radius: 10px;
-    width: 600px;
+    border: 0.1rem solid white;
+    border-radius: 1rem;
+    width: 60rem;
     color: bisque;
-    padding: 12px;
+    padding: 1.2rem;
     overflow: hidden;
 
 }
 
 #todo {
-    width: 520px;
-    border-radius: 2px;
-    height: 20px;
+    width: 52rem;
+    border-radius: 0.2rem;
+    height: 3rem;
 }
 
 h1 {
-    font-size: 55px;
+    font-size: 5.5rem;
 }
 
 .button {
-    width: 100px;
-    border-radius: 5px;
+    width: 10rem;
+    border-radius: 0.5rem;
 }
 /* .main{
     color: gray;
     border: 2px solid floralwhite;
     background-color: floralwhite;
 } */
+
+
+@media(max-width:998px){
+    html{
+        font-size: 55%;
+    }
+}
+
+@media(max-width:768px){
+    html{
+        font-size: 45%;
+    }
+}
+
+@media(max-width:668px){
+    html{
+        font-size: 35%;
+    }
+}
+
+@media(max-width:568px){
+    html{
+        font-size: 35%;
+    }
+}
+
+@media(max-width:468px){
+    html{
+        font-size: 35%;
+    }
+}
+
+@media(max-width:368px){
+    html{
+        font-size: 30%;
+    }
+}
