--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap');
 
 html{
-    font-size: 10px;
+    font-size: 10px ;
 }
 
 
@@ -35,8 +35,9 @@ body {
 
 #todo {
     width: 52rem;
-    border-radius: 0.2rem;
+    border-radius: 1rem;
     height: 3rem;
+    outline: none;
 }
 
 h1 {
@@ -45,7 +46,20 @@ h1 {
 
 .button {
     width: 10rem;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
+    border:none;
+    height: 4rem;
+    color: floralwhite;
+    background-color: black;
+    box-shadow: inset 0 0 0 0 rgba(24, 24, 27, 0.6);
+    transition: ease-out 0.5s;
+    outline: none;
+    cursor: pointer;
+}
+
+.button:hover {
+    box-shadow: inset 10rem 0 0 0 rgba(24, 24, 27, 0.6);
+
 }
 /* .main{
     color: gray;
