--- a/style.css
+++ b/style.css
@@ -36,8 +36,10 @@ body {
 #todo {
     width: 52rem;
     border-radius: 1rem;
-    height: 3rem;
+    height: 4rem;
     outline: none;
+    background-color: floralwhite;
+    
 }
 
 h1 {
@@ -48,19 +50,19 @@ h1 {
     width: 10rem;
     border-radius: 1rem;
     border:none;
-    height: 4rem;
+    height: 5rem;
     color: floralwhite;
     background-color: black;
-    box-shadow: inset 0 0 0 0 rgba(24, 24, 27, 0.6);
+    box-shadow: inset 0 0 0 0 rgba(99, 99, 121, 0.6);
     transition: ease-out 0.5s;
     outline: none;
     cursor: pointer;
 }
 
-.button:hover {
-    box-shadow: inset 10rem 0 0 0 rgba(24, 24, 27, 0.6);
+    .button:hover {
+        box-shadow: inset 10rem 0 0 0 rgba(99, 99, 133, 0.6);
 
-}
+    }
 /* .main{
     color: gray;
     border: 2px solid floralwhite;
