--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     width: 52rem;
     border-radius: 1rem;
     height: 4rem;
+    font-size: large;
     outline: none;
     background-color: floralwhite;
     
