--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap');
 
-html{
-    font-size: 10px ;
+html {
+    font-size: 10px;
 }
 
 
 body {
     background-image: linear-gradient(100deg, #575656, #062e3f);
     font-family: 'Rajdhani', sans-serif;
- 
+    padding-top: 10rem;
 }
 
 .head {
@@ -40,17 +40,19 @@ body {
     font-size: large;
     outline: none;
     background-color: floralwhite;
-    
+
 }
 
 h1 {
+
     font-size: 5.5rem;
+
 }
 
 .button {
     width: 10rem;
     border-radius: 1rem;
-    border:none;
+    border: none;
     height: 5rem;
     color: floralwhite;
     background-color: black;
@@ -60,10 +62,11 @@ h1 {
     cursor: pointer;
 }
 
-    .button:hover {
-        box-shadow: inset 10rem 0 0 0 rgba(99, 99, 133, 0.6);
+.button:hover {
+    box-shadow: inset 10rem 0 0 0 rgba(99, 99, 133, 0.6);
 
-    }
+}
+
 /* .main{
     color: gray;
     border: 2px solid floralwhite;
@@ -71,38 +74,40 @@ h1 {
 } */
 
 
-@media(max-width:998px){
-    html{
+@media(max-width:998px) {
+    html {
         font-size: 55%;
     }
 }
 
-@media(max-width:768px){
-    html{
+@media(max-width:768px) {
+    html {
         font-size: 45%;
     }
 }
 
-@media(max-width:668px){
-    html{
+@media(max-width:668px) {
+    html {
         font-size: 35%;
     }
 }
 
-@media(max-width:568px){
-    html{
+@media(max-width:568px) {
+    html {
         font-size: 35%;
     }
 }
 
-@media(max-width:468px){
-    html{
+@media(max-width:468px) {
+    html {
         font-size: 35%;
     }
 }
 
-@media(max-width:368px){
-    html{
+@media(max-width:368px) {
+    html {
         font-size: 30%;
     }
 }
+
+
