--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     font-family: 'Rajdhani', sans-serif;
     padding-top: 10rem;
     
+    
 }
 
 .head {
@@ -44,7 +45,7 @@ body {
 
 }
 
-h1 {
+.h1 {
 
     font-size: 5.5rem;
 
@@ -135,3 +136,25 @@ h1 {
 }
 
 
+.h1 {
+    border-right: solid 0.3rem rgba(0, 0, 0, 0.75);
+    white-space: pre;
+    overflow: hidden;     
+    max-width: 52rem;
+  }
+  
+
+.h1 {
+    animation: animated-text 2s steps(11,end) 0.5s 1 normal both,
+        animated-cursor 750ms steps(11,end) infinite;
+  }
+
+.h1.darker-title {
+    animation: animated-text 2s steps(11,end) 0.5s 1 normal both, darker-animated-cursor 750ms steps(11,end) infinite;
+}
+@keyframes animated-text{
+    from{width: 0%;}
+    to{width: 520px;}
+  }
+
+  
