--- a/style.css
+++ b/style.css
@@ -7,8 +7,13 @@ html {
 
 body {
     background-image: linear-gradient(100deg, #575656, #062e3f);
+    /* background-image: url(/wallpaperflare.com_wallpaper.jpg); */
+    background-size: cover;
     font-family: 'Rajdhani', sans-serif;
     padding-top: 10rem;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    height: 100vh;
     
     
 }
@@ -42,6 +47,7 @@ body {
     font-size: large;
     outline: none;
     background-color: floralwhite;
+    
 
 }
 
@@ -80,6 +86,9 @@ body {
     html {
         font-size: 55%;
     }
+    .h1{
+        font-size: 8rem;
+    }
 }
 
 @media(max-width:768px) {
@@ -91,6 +100,9 @@ body {
 @media(max-width:668px) {
     html {
         font-size: 35%;
+    }
+    .h1{
+        font-size: 10rem;
     }
     
 }
@@ -106,6 +118,9 @@ body {
     .button{
         height: 9rem;
     }
+    .h1{
+        font-size: 9rem;
+    }
 }
 
 @media(max-width:468px) {
@@ -118,6 +133,9 @@ body {
     }
     .button{
         height: 9rem;
+    }
+    .h1{
+        font-size: 9rem;
     }
 }
 
@@ -133,18 +151,21 @@ body {
     .button{
         height: 9rem;
     }
+    .h1{
+        font-size: 8rem;
+    }
 }
 
 
-.h1 {
+/* .h1 {
     border-right: solid 0.3rem rgba(0, 0, 0, 0.75);
     white-space: pre;
     overflow: hidden;     
     max-width: 52rem;
-  }
+  } */
   
 
-.h1 {
+/* .h1 {
     animation: animated-text 2s steps(11,end) 0.5s 1 normal both,
         animated-cursor 750ms steps(11,end) infinite;
   }
@@ -155,6 +176,7 @@ body {
 @keyframes animated-text{
     from{width: 0%;}
     to{width: 520px;}
-  }
+  } */
+
 
   
